# cub3D

./: CMakeLists.txt  Makefile  a.out  add_spr_to_arr.c  calc_sprite.c  calc_vector.c  create_rgb.c  cub3D  cub3D.h  cub3D.h.gch  cub3D_for_linux.h  display_utils.c  dist_dots.c  draw_map.c  draw_player.c  draw_walls.c  ft_cub.h  handle_error.c  hooks.c  init_game.c  key_hook.c  len_of_vec.c  main.c  map.cub  map2.cub  perp_vector.c  player_x_y.c  raycast.c  raycaster.c  sandbox.c  scaler.c  set_player.c  set_player_x_y.c  sprite_utils.c  sprite_utils_part_three.c  sprite_utils_part_two.c  take_screenshot.c  todos.txt  visualize.c
check/: CMakeLists.txt  Makefile  a.out  cub3D.h  cub3D.h.gch  display_utils.c  len_of_vec.c  main.c  map.cub  map2.cub  perp_vector.c  set_grid.c  sprite_utils.c  todos.txt
check/parser/: is_map.c  parse_map.c  parse_other.c  parser.c
check/validator/: enter_validator.c
cobara/: Makefile
cobara/libft/: ft_atoi.c  ft_bzero.c  ft_isalpha.c  ft_isascii.c  ft_lstclear.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_strjoin.c  ft_strlen.c  ft_strmapi.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_toupper.c  libft.h
cobara/maps/: map.cub  test.cub
cobara/src/: cubgame.h
cobara/src/engine/: bitmap.c  draw.c  game_utils.c  init_tex.c  rendering.c
cobara/src/parser/: parser_map.c  util_function.c  validation.c
cobara/src/utils/: get_next_line_utils.c
cobara/textures/: eagle.xpm  greystone.xpm  purplestone.xpm
cub3D_final/: Makefile  display_utils.c  ft_cub.h
cub3D_final/ft_cub3D/: Makefile
cub3D_final/ft_cub3D/srcs/: raycast.c  take_screenshot.c
cub3D_final/ft_cub3D/srcs/parser/: parse_other.c
cub3D_final/ft_cub3D/textures/: mc_bg.xpm
cub3D_final/get_next_line/: get_next_line_bonus.c  get_next_line_bonus.h
cub3D_final/maps/: map.cub  map3.cub
cub3D_final/minilibx_opengl_20191021/: mlx_get_screen_size.m
cub3D_final/srcs/: create_rgb.c  ft_cub.h  handle_error.c  key_hook.c  perp_vector.c
cub3D_final/textures/: neon_ccurtains.xpm  neon_stripes.xpm
from_scratch/: main.c  sprite_utils.c
from_scratch/check/: dist_dots.c  handle_error.c  init_game.c  map2.cub
from_scratch/cobara/: cub3D
from_scratch/cobara/libft/: Makefile  ft_calloc.c  ft_isalnum.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstdelone.c  ft_lstiter.c  ft_lstsize.c  ft_memcpy.c  ft_memmove.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strlcat.c  ft_strlcpy.c  ft_strncmp.c  ft_strnstr.c  ft_tolower.c
from_scratch/cobara/maps/: small.cub
from_scratch/cobara/src/: main.c
from_scratch/cobara/src/engine/: game.c  move.c  rays.c  rays_utils.c  (+2 more)
from_scratch/cobara/textures/: barrel.xpm  redbrick.xpm
from_scratch/cub3D copy/: CMakeLists.txt  cub3D.h.gch  hooks.c  main.c  perp_vector.c
from_scratch/cub3D copy 2/: CMakeLists.txt  Makefile  cub3D.h  cub3D.h.gch  init_game.c  key_hook.c  main.c
from_scratch/cub3D copy 2/check/: cowboy.xpm  create_rgb.c  cub3D  cub3D.h  main.c
from_scratch/cub3D copy 2/get_next_line/: get_next_line.h
from_scratch/cub3D copy 2/libft/: Makefile  ft_atoi.c
from_scratch/cub3D copy 2/maps/: map.cub  map3.cub
from_scratch/cub3D copy 2/other/: draw_map.c  raycaster.c
from_scratch/cub3D copy 2/textures/: sprite.xpm
from_scratch/cub3D copy 2/validator/: enter_validator.c
from_scratch/cub3D copy/check/: django_unchaned.xpm
from_scratch/cub3D copy/other/: scaler.c
from_scratch/cub3D copy/parser/: parser.c
from_scratch/cub3D copy/textures/: mc_bg.xpm
from_scratch/libft/: CMakeLists.txt
from_scratch/maps/: map.cub  map2.cub  map3.cub
from_scratch/mdude/: Makefile  map.cub
from_scratch/mdude/functions/: checks.c  draw_col.c  ft_close.c  get_next_line.c  init_color.c  init_map.c  init_screen.c  is_space.c  is_str.c  main.c  maxlen.c  move.c  my_mlx_pixel_put.c  paint_f.c  paint_ray.c  parser.c  refresh.c  screen.c  start_pos.c  valid_map.c
from_scratch/mdude/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isascii.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstlast.c  ft_lstmap.c  ft_memccpy.c  ft_memchr.c  ft_memcpy.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_strchr.c  ft_strjoin.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strtrim.c  ft_substr.c  ft_toupper.c  libft.h
from_scratch/mdude/textures/: WALL17.xpm  wood.xpm
from_scratch/other/: todos.txt
from_scratch/textures/: sprite_can.xpm
ft_cub3D/libft/: Makefile  ft_atoi.c
ft_cub3D/maps/: map.cub  map2.cub
ft_cub3D/minilibx_opengl_20191021/: mlx.h
ft_cub3D/srcs/: cub3D  display_utils.c  main.c  sprite_utils_part_three.c
ft_cub3D/textures/: sprite_mc.xpm
get_next_line/: get_next_line.c  get_next_line_utils_bonus.c
get_next_line1/: get_next_line.h
libft/: ft_atoi.c
maps/: map.cub  map.cub_room  map2.cub  map3.cub
mdude/: cub3D
mdude/functions/: count_sprites.c  cub3d.h  draw_sp.c  ft_path.c  get_color.c  get_next_line_utils.c  get_pos.c  init_sp.c  init_tex.c  init_vars.c  intlen.c  is_news.c  is_wall.c  paint_c.c  save_line.c  sizestr.c  sort_s.c  turn_l.c
mdude/libft/: ft_isalnum.c  ft_isalpha.c  ft_isdigit.c  ft_isprint.c  ft_lstdelone.c  ft_lstiter.c  ft_lstnew.c  ft_lstsize.c  ft_memcmp.c  ft_memmove.c  ft_memset.c  ft_split.c  ft_strdup.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strrchr.c  ft_tolower.c
mdude/textures/: WALL33.xpm  WALL77.xpm  WALL89.xpm  barrel.xpm
minilibx_opengl_20191021/: mlx_get_screen_size.m
other/: dist_dots.c  draw_player.c  main1.c  sandbox.c  sandbox_validator.c  todos.txt
parser/: is_map.c  parse_map.c  parse_other.c  parser.c  parser_utils.c
textures/: barrel.xpm  marilyn-monroe.xpm  mountains.xpm  neon_shades.xpm  neon_trian.xpm  sprite.xpm
validator/: enter_validator.c
(+8 files in other folders)
